controls/C-0013/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0013-deny-resources-with-capability-to-run-as-root"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: >
        object.kind != 'Pod' || object.spec.containers.all(container,
          (
            has(container.securityContext) &&
            has(container.securityContext.allowPrivilegeEscalation) &&
            container.securityContext.allowPrivilegeEscalation == false
          ) &&
          (
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsNonRoot) &&
                container.securityContext.runAsNonRoot == true
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsNonRoot)
                ) &&
                (
                  has(object.spec.securityContext) &&
                  has(object.spec.securityContext.runAsNonRoot) &&
                  object.spec.securityContext.runAsNonRoot == true
                )
              )
            ) ||
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsUser) &&
                container.securityContext.runAsUser != 0
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsUser)
                ) &&
                (
                  has(object.spec.securityContext) &&
                  has(object.spec.securityContext.runAsUser) &&
                  object.spec.securityContext.runAsUser != 0
                )
              )
            )
          )
        )
      message: "Pods contains container/s which have the capability to run as root! (see more at https://kubescape.io/docs/controls/c-0013/)"

    - expression: >
        ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'].all(kind, object.kind != kind) || object.spec.template.spec.containers.all(container,
          (
            has(container.securityContext) &&
            has(container.securityContext.allowPrivilegeEscalation) &&
            container.securityContext.allowPrivilegeEscalation == false
          ) &&
          (
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsNonRoot) &&
                container.securityContext.runAsNonRoot == true
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsNonRoot)
                ) &&
                (
                  has(object.spec.template.spec.securityContext) &&
                  has(object.spec.template.spec.securityContext.runAsNonRoot) &&
                  object.spec.template.spec.securityContext.runAsNonRoot == true
                )
              )
            ) ||
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsUser) &&
                container.securityContext.runAsUser != 0
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsUser)
                ) &&
                (
                  has(object.spec.template.spec.securityContext) &&
                  has(object.spec.template.spec.securityContext.runAsUser) &&
                  object.spec.template.spec.securityContext.runAsUser != 0
                )
              )
            )
          )
        )
      message: "Workloads contains container/s which have the capability to run as root! (see more at https://kubescape.io/docs/controls/c-0013/)"

    - expression: >
        object.kind != 'CronJob' || object.spec.jobTemplate.spec.template.spec.containers.all(container,
          (
            has(container.securityContext) &&
            has(container.securityContext.allowPrivilegeEscalation) &&
            container.securityContext.allowPrivilegeEscalation == false
          ) &&
          (
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsNonRoot) &&
                container.securityContext.runAsNonRoot == true
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsNonRoot)
                ) &&
                (
                  has(object.spec.jobTemplate.spec.template.spec.securityContext) &&
                  has(object.spec.jobTemplate.spec.template.spec.securityContext.runAsNonRoot) &&
                  object.spec.jobTemplate.spec.template.spec.securityContext.runAsNonRoot == true
                )
              )
            ) ||
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsUser) &&
                container.securityContext.runAsUser != 0
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsUser)
                ) &&
                (
                  has(object.spec.jobTemplate.spec.template.spec.securityContext) &&
                  has(object.spec.jobTemplate.spec.template.spec.securityContext.runAsUser) &&
                  object.spec.jobTemplate.spec.template.spec.securityContext.runAsUser != 0
                )
              )
            )
          )
        )
      message: "CronJob contains container/s which have the capability to run as root! (see more at https://kubescape.io/docs/controls/c-0013/)"
